tests/asm-link/purge-multiple/rgbasm.err
error: labels cannot be deleted
   ╭─[ test.asm:9:7 ]
   │
 9 │ PURGE u, v, w, x, y
   │       ┬  
   │       ╰── attempting to delete `u` here
───╯
1 error generated.
